[gd_scene load_steps=10 format=3]

[ext_resource type="PackedScene" uid="uid://bp5dr3h8j1x2w" path="res://Scene/Base/BaseThroughLevel.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Level/Level_6.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://mqh3k6nftoe3" path="res://Art/Level/Level_4/246.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cn01rla7ddqkn" path="res://Art/Level/Level_6/91.png" id="4"]
[ext_resource type="Texture2D" uid="uid://fjqnlxm2x52i" path="res://Art/Level/Level_6/241.png" id="5"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(5508, 151.5)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(7, 1564)
script = null

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(1411.5, 1564)
script = null

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(243, 38.5)
script = null

[node name="Level_6" instance=ExtResource( "1" )]
script = ExtResource( "2" )

[node name="wall" parent="." index="0"]
collision_mask = 0

[node name="floor" type="CollisionShape2D" parent="wall" index="1"]
position = Vector2(2436, 474.75)
shape = SubResource( "1" )
metadata/_edit_lock_ = true

[node name="stop1" type="CollisionShape2D" parent="wall" index="2"]
position = Vector2(1108.5, -233)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="stop2" type="CollisionShape2D" parent="wall" index="3"]
position = Vector2(2250, -234)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="stop3" type="CollisionShape2D" parent="wall" index="4"]
position = Vector2(3504, -226)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="stop4" type="CollisionShape2D" parent="wall" index="5"]
position = Vector2(5305.25, -243)
shape = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="." index="9"]
collision_layer = 32
collision_mask = 0

[node name="stage_1" type="CollisionShape2D" parent="StaticBody2D" index="0"]
position = Vector2(3027.5, 266.75)
shape = SubResource( "4" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stage_2" type="CollisionShape2D" parent="StaticBody2D" index="1"]
position = Vector2(3307, 93)
shape = SubResource( "4" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stage_3" type="CollisionShape2D" parent="StaticBody2D" index="2"]
position = Vector2(3621, 240)
shape = SubResource( "4" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stage_4" type="CollisionShape2D" parent="StaticBody2D" index="3"]
position = Vector2(4570, 221)
shape = SubResource( "4" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="246" type="Sprite2D" parent="BackGround/End" index="0"]
position = Vector2(721, 244)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="front" type="ParallaxLayer" parent="BackGround" index="1"]
position = Vector2(2, 1)

[node name="91" type="Sprite2D" parent="BackGround/front" index="0"]
position = Vector2(2444, 295)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="241" type="Sprite2D" parent="BackGround/floor_2" index="0"]
position = Vector2(2368.75, 414)
scale = Vector2(1.01776, 1)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="exit" parent="." index="11"]
position = Vector2(4524, 117)
metadata/_edit_lock_ = true
